# livedoor-news-dataset

./: .gitignore  Makefile  Pipfile  README.md  app.py  dataset.py  download.py  livedoor_news.ipynb  livedoor_news.py  livedoot_news_dataset.ipynb  main.py  package-lock.json  package.json  preprocessing.py  pyproject.toml  requirements.txt  train.py  vue.config.js
livedoor/: __init__.py  config.py  model.py  tokenizer.py
news_classification/: __main__.py  japanese_tokenizer.py  livedoor_news.py  model.py  server.py
news_classifier/: __main__.py  dnn.py  japanese.py  livedoor.py  livedoor_news.py  model.py  nn.py  preprocessing.py  server.py  training.py
public/: index.html
src/: App.vue  Classification.ts
src/components/: CategoryChart.vue  PredictionChart.vue  TfidfTable.vue  TokenTable.vue
static/: index.html
training/: __init__.py  dnn.py  tree.py  utils.py
web/: package-lock.json  package.json  vue.config.js
web/public/: index.html
web/src/: App.vue
web/src/components/: HorizontalBarChart.vue
