[tool.poetry]
name = "livedoor-news-dataset"
version = "0.1.0"
description = "Text Classification model with livedoor news corpus."
authors = ["IDA Kenichiro <ida.kenichiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
bokeh = "^2.2.1"
natto-py = "^0.9.2"
rich = "^8.0.0"
scikit-learn = "^0.23.2"
streamlit = "^0.68.0"
tensorflow = "^2.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
