[tool.poetry]
name = "livedoor-news-dataset"
version = "0.1.0"
description = "Text Classification model with livedoor news corpus."
authors = ["IDA Kenichiro <ida.kenichiro@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
bokeh = "2.4.1"
natto-py = "^1.0.0"
rich = "^11.2.0"
scikit-learn = "^1.0.2"
streamlit = "^1.5.1"
tensorflow = "^2.10.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
